# rust-cpu-renderer

./: .gitignore  README.md
rust/: Cargo.toml  build.rs
rust/benches/: bench_3d_projection.rs
rust/src/: display.rs  main.rs  simulator.rs
rust/src/display/: drawing.rs  events.rs  input.rs
rust/src/simulator/: display.rs  mod.rs  objects.rs  renderer.rs  time.rs
rust/src/simulator/display/: drawing.rs  mod.rs
rust/src/simulator/renderer/: geometry.rs  linearalgebra.rs  mod.rs
rust/src/simulator/screen/: drawing.rs  mod.rs
rust/src/simulator/window/: color.rs  event.rs  mod.rs
rust/src/window/: color.rs  mod.rs
