[package]
name = "simulation_engine"
version = "0.1.0"
authors = ["Aaron Boult <aaronboult25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi", "memoryapi", "impl-default", "processthreadsapi", "windowsx"] }

[dependencies.rand]
verion = "0.8.3"